Fix screen height on mobile

--- a/src/styles/components/App.module.css
+++ b/src/styles/components/App.module.css
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  height: 100vh;
   width: 100vw;
   flex-direction: column;
   font-family: var(--font-family-main);
